# tcltk_netanalyzer

./: README.md  pyproject.toml  setup.cfg
example/: core.py  gui.py
