[metadata]
name = TCL/TK Network Analyzer
version = 1.0
author = Ivan Dolgov (aligator527)
author_email = algiator5278@gmail.com
description = Tool for counting sent\received bytes\packages by all system or each NIC
long_description = file: README.md
long_description_content_type = text/markdown
keywords = gui, network, analyzer, packages
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
install_requires =
    psutil
    PySimpleGUI
package_dir=
    =example

[options.packages.find]
where=example